--- a/homework2/css/style.css
+++ b/homework2/css/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: Lucida Grande, sans-serif;
-	color: white;
-	background: black; 
+	color: #ffffff;
+	background: #000000; 
 }
 
 h1 {
@@ -11,7 +11,7 @@ h1 {
 
 h2 {
 	font-size: 30px;
-	text-shadow: 5px 5px 2px #808080
+	text-shadow: 5px 5px 2px #808080;
 }
 
 p {
@@ -23,4 +23,43 @@ img {
 	display: block;
 	margin: 0 auto;
 	width: 525px;
+}
+
+div {
+	min-height: 150px; 
+	padding: 25px; 
+}
+
+#red {
+	background: #ff0000;
+	text-align: right;
+}
+
+#blue {
+	background: #0000ff;
+	text-align: left;
+}
+
+#yellow {
+	background: #ffff00;
+	text-align: right;
+}
+
+#yellow h2 {
+	color: #000000;
+	text-shadow: 5px 5px 2px #C7E2C7;
+}
+
+#yellow p {
+	color: #000000;
+}
+
+#green {
+	background: #008000;
+	text-align: left;
+}
+
+footer {
+	text-align: right; 
+	padding: 0px 10px 10px 0px; 
 }
