--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -93,11 +93,17 @@ h1{
 
 footer{
   /*background-color: black;*/
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
   color: white;
   padding: 50px;
   text-align: center;
+}
+
+@media screen and (min-width: 1024px){
+	footer{
+		position: absolute;
+	}
 }
