--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -115,8 +115,8 @@ footer{
   text-align: center;
 }
 
-@media screen and (min-width: 800px){
+/*@media screen and (min-width: 800px){
 	footer{
 		position: absolute;
 	}
-}
+}*/
